# simplest-cmake

./: CMakeLists.txt  README.md
simple_bin/: .gitignore  README.md
simple_bin/src/: CMakeLists.txt
simple_bin_use_lib/: CMakeLists.txt  README.md
simple_bin_use_lib/src/: CMakeLists.txt  call_hello.c
simple_lib/: CMakeLists.txt  README.md  helloLib.pc.in
simple_lib/src/: CMakeLists.txt  hello_lib.c  hello_lib.h
src/: CMakeLists.txt
